# SPE-mini

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  calc.cpp  deploy-calculator.yml  inventory.ini
src/: calc.cpp  calc.h  main.cpp
src/BasicCalc/: basic_calc.cpp  basic_calc.h
src/ExpressionEvaluator/: expression_eval.cpp  expression_eval.h
tests/: tests.cpp  tests.h
